tests/neg-custom-args/i2333.scala
@deprecated("bla", "2.11.0") class Foo

object Test {
  new Foo // error
}
